Aula JPA atualizada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.profiles.active=dev
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.data-password=password
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-server.port=8081
-server.servlet.context-path=/system-vendas
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
